changes in pyday-web logo

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand" href="index.html">
-                    <img src="img/pyday-web.png" alt="PayDay 2016" height="80"/>
+                    <img src="img/pyday-web.png" alt="PayDay 2016" height="80" class="pyday-web" />
                 </a>
             </div>
 
