--- a/index.html
+++ b/index.html
@@ -182,9 +182,8 @@
 	    <div class="wow bounceInUp" data-wow-delay="0.2s">
               <div class="team boxed-grey">
                 <div class="inner">
-		  <h5>Manuel Kaufmann</h5>
-                  <p class="subtitle">Argentina en Python</p>
-                  <div class="avatar"><img src="img/team/humitos.jpeg" alt="" class="img-responsive img-circle" /></div>
+		  <h5>Ariel Rossanigo</h5>
+                  <div class="avatar"><img src="img/team/ariel.webp" alt="" class="img-responsive img-circle" /></div>
                 </div>
               </div>
 	    </div>
@@ -193,9 +192,8 @@
 	    <div class="wow bounceInUp" data-wow-delay="0.5s">
               <div class="team boxed-grey">
                 <div class="inner">
-		  <h5>Martín Abente</h5>
-                  <p class="subtitle">Sugar Labs<br/></p>
-                  <div class="avatar"><img src="img/team/tincho.jpg" alt="" class="img-responsive img-circle" /></div>
+		  <h5>Juan Pedro Fisanotti</h5>
+                  <div class="avatar"><img src="img/team/fisa_bw.png" alt="" class="img-responsive img-circle" /></div>
 
                 </div>
               </div>
@@ -205,9 +203,8 @@
 	    <div class="wow bounceInUp" data-wow-delay="0.8s">
               <div class="team boxed-grey">
                 <div class="inner">
-		  <h5>Marcelo Elizeche </h5>
-                  <p class="subtitle">LOOP</p>
-                  <div class="avatar"><img src="img/team/marce.jpg" alt="" class="img-responsive img-circle" /></div>
+		  <h5>Matías Barriento</h5>
+                  <div class="avatar"><img src="img/team/mati.JPG" alt="" class="img-responsive img-circle" /></div>
 
                 </div>
               </div>
@@ -217,9 +214,8 @@
 	    <div class="wow bounceInUp" data-wow-delay="1s">
               <div class="team boxed-grey">
                 <div class="inner">
-		  <h5>Javier Roa Benitez</h5>
-                  <p class="subtitle">UAA</p>
-                  <div class="avatar"><img src="img/team/javier.jpg" alt="" class="img-responsive img-circle" /></div>
+		  <h5>Carlos Matías de la Torre</h5>
+                  <div class="avatar"><img src="img/team/litox.jpg" alt="" class="img-responsive img-circle" /></div>
 
                 </div>
               </div>
@@ -228,68 +224,11 @@
 
 	  </div>
 
-	</br>
-
-        <div class="row">
-	  <div class="col-xs-6 col-sm-3 col-md-3">
-	    <div class="wow bounceInUp" data-wow-delay="0.2s">
-              <div class="team boxed-grey">
-                <div class="inner">
-		  <h5>Gary Servin Cardozo</h5>
-                  <p class="subtitle">Robótica Educativa</p>
-                  <div class="avatar"><img src="img/team/gary.jpg" alt="" class="img-responsive img-circle" /></div>
-
-                </div>
-              </div>
-	    </div>
-          </div>
-
-	  <div class="col-xs-6 col-sm-3 col-md-3">
-	    <div class="wow bounceInUp" data-wow-delay="0.5s">
-              <div class="team boxed-grey">
-                <div class="inner">
-		  <h5>Richar Nuñez</h5>
-                  <p class="subtitle">Paraguay Educa</p>
-                  <div class="avatar"><img src="img/team/richar.jpg" alt="" class="img-responsive img-circle" /></div>
-
-                </div>
-              </div>
-	    </div>
-          </div>
-
-          <div class="col-xs-6 col-sm-3 col-md-3">
-            <div class="wow bounceInUp" data-wow-delay="0.8s">
-              <div class="team boxed-grey">
-                <div class="inner">
-                  <h5>Natalia Figueredo</h5>
-                  <p class="subtitle">Roshka</p>
-                  <div class="avatar"><img src="img/team/nati.jpg" alt="" class="img-responsive img-circle" /></div>
-
-                </div>
-              </div>
-            </div>
-          </div>
-
-	  <div class="col-xs-6 col-sm-3 col-md-3">
-	    <div class="wow bounceInUp" data-wow-delay="1s">
-              <div class="team boxed-grey">
-                <div class="inner">
-		  <h5>Juan Baez</h5>
-                  <p class="subtitle">.</p>
-                  <div class="avatar"><img src="img/team/juan.jpg" alt="" class="img-responsive img-circle" /></div>
-
-                </div>
-              </div>
-	    </div>
-          </div>
-
-        </div>
-
 	<br />
 
 	<div class="service-desc">
 	  <p align="center">
-	    <a style="width: 250px" target="_blank" class="btn btn-large btn-primary" href="https://drive.google.com/file/d/0B2rKoqZVq0cPWWswUlIzVXdiRjQ/view">Ver Cronograma</a>
+	    <a style="width: 250px" target="_blank" class="btn btn-large btn-primary" href="https://docs.google.com/spreadsheets/d/1FUqrQoWYyT6-FeHjsC6Uxzba3y_a07CNvaj-TblbPsw/edit?usp=sharing">Ver Cronograma</a>
 	  </p>
 	</div>
 
