--- a/index.html
+++ b/index.html
@@ -317,10 +317,10 @@
 					<div class="wow fadeInLeft" data-wow-delay="0.2s">
 						<div class="service-box">
 							<div class="service-desc">
-							  <p align="justify">La lista de correo de "Python Paraguay" está abierta a todos los interesados en Python, y está dedicada en especial a los residentes de Paraguay. En esta lista discutimos todos los temas relacionados con la promoción, difusión y temas técnicos del lenguaje de programación Python. Además, planeamos eventos especiales y la creación de contenido local.</p>
+							  <p align="justify">La lista de correo de "Python Argentina" (PyAr) está abierta a todos los interesados en Python. En esta lista discutimos todos los temas relacionados con la promoción, difusión y temas técnicos del lenguaje de programación Python, sobre todo en Argentina. Además, planeamos eventos especiales y la creación de contenido local.</p>
 
-							  <p align="justify">Si tenés una duda sobre cómo funciona un módulo, cómo arrancar con Python, qué IDE recomiendan para programar o cualquier otra consulta, este es el lugar indicado para hacerla. ¡Sumate!</p>
-							  <h5>Hacé click en "¡Quiero participar!",<br/><br/> luego en " Suscribirse a este grupo" y listo :)</h5>
+							  <p align="justify">Ya seas un recién llegado a la programación o un experto, sin duda disfrutarás mucho de la lista. ¡Sumate!</p>
+							  <h5>Hacé click en "¡Quiero participar!",<br/><br/> luego inscribite en pyar :)</h5>
 							</div>
 						</div>
 					</div>
@@ -329,7 +329,7 @@
 						<div class="service-box">
 							<div class="service-desc">
 								<p align="center">
-									<a style="width: 250px" target="_blank" class="btn btn-large btn-primary" href="https://groups.google.com/forum/#!forum/python-paraguay">¡Quiero participar!</a>
+									<a style="width: 250px" target="_blank" class="btn btn-large btn-primary" href="http://www.python.org.ar/lista/">¡Quiero participar!</a>
 								</p>
 							</div>
 <br/><br/>
