--- a/index.html
+++ b/index.html
@@ -360,8 +360,9 @@
 					<div class="wow bounceInDown" data-wow-delay="0.4s">
 					<div class="section-heading" >
 					<h2>Ubicación<h2>
-					<h3 style="margin-top:-10px;">L'Office Santos</h3>
-					<h5 style="margin-top:-20px;">Gral. Santos 1170 (casi Concordia)</h5>
+					<h3 style="margin-top:-10px;">Rafaela - Santa Fe</h3>
+					<h5 style="margin-top:-20px;">Bv. Hipólito Irigoyen 1502</h5>
+					<h5 style="margin-top:-20px;">UCSE - DAR</h5>
 					<i class="fa fa-angle-down"></i>
 					</div>
 					</div>
@@ -373,7 +374,7 @@
 
 
 		<div class="row" >
-		  <iframe width="100%" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://www.openstreetmap.org/export/embed.html?bbox=-57.61463284492492%2C-25.28229380737672%2C-57.602659463882446%2C-25.276540877212426&amp;layer=mapnik&amp;marker=-25.27942222709374%2C-57.60864615440369" style="border: 1px solid black"></iframe><br/><small><a target="_blank" href="http://www.openstreetmap.org/?mlat=-25.27942&amp;mlon=-57.60865#map=17/-25.27942/-57.60865">Ver mapa más grande</a></small>
+			<iframe width="100%" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://www.openstreetmap.org/export/embed.html?bbox=-61.50165796279907%2C-31.272086185967012%2C-61.48749589920044%2C-31.264346335228133&amp;layer=mapnik&marker=-31.2666737%2C-61.4961833" style="border: 1px solid black"></iframe><br/><small><a href="http://www.openstreetmap.org/#map=17/-31.26822/-61.49458">Ver mapa más grande</a></small>
 		</div>
 
 		<div class="row">
