--- a/index.html
+++ b/index.html
@@ -227,11 +227,15 @@
 
 	<div class="service-desc">
 	  <p align="center">
-	    <a style="width: 250px" target="_blank" class="btn btn-large btn-primary" href="https://docs.google.com/spreadsheets/d/1FUqrQoWYyT6-FeHjsC6Uxzba3y_a07CNvaj-TblbPsw/edit?usp=sharing">Ver Cronograma</a>
+			<iframe height="450px" width="100%" src="https://docs.google.com/spreadsheets/d/1FUqrQoWYyT6-FeHjsC6Uxzba3y_a07CNvaj-TblbPsw/pubhtml?gid=0&amp;single=false&amp;widget=false&amp;headers=false&chrome=false"></iframe>
 	  </p>
 	</div>
 
 	</section>
+
+
+
+
 	<!-- /Section: about -->
 
 	<section id="inscripcion" class="home-section text-center bg-gray">
