--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
         <li class="active"><a href="#intro">Inicio</a></li>
         <li><a href="#evento">El Evento</a></li>
 		<li><a href="#disertantes">Disertantes</a></li>
+		<li><a href="#cronograma">Cronograma</a></li>
 		<li><a href="#inscripcion">Inscripción</a></li>
 		<li><a href="#comunidad">Comunidad</a></li>
 		<li><a href="#lugar">El Lugar</a></li>
@@ -225,13 +226,54 @@
 
 	<br />
 
-	<div class="service-desc">
-	  <p align="center">
-			<iframe height="450px" width="100%" src="https://docs.google.com/spreadsheets/d/1FUqrQoWYyT6-FeHjsC6Uxzba3y_a07CNvaj-TblbPsw/pubhtml?gid=0&amp;single=false&amp;widget=false&amp;headers=false&chrome=false"></iframe>
-	  </p>
-	</div>
+	</section>
+
+
+
+
+
+
+	<section id="cronograma" class="home-section text-center bg-gray">
+		<div class="heading-about">
+			<div class="container">
+				<div class="row">
+		<div class="col-lg-8 col-lg-offset-2">
+			<div class="wow bounceInDown" data-wow-delay="0.4s">
+				<div class="section-heading">
+					<h2>Cronograma</h2>
+					<i class="fa fa-2x fa-angle-down"></i>
+
+				</div>
+			</div>
+		</div>
+				</div>
+			</div>
+		</div>
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-2 col-lg-offset-5">
+		<hr class="marginbot-50">
+				</div>
+			</div>
+						<div class="row">
+
+				<div class="col-lg-6 col-lg-offset-3">
+					<div class="wow fadeInLeft" data-wow-delay="0.2s">
+						<div class="service-box">
+							<div class="service-desc">
+								<p align="center">
+									<iframe height="450px" width="100%" src="https://docs.google.com/spreadsheets/d/1FUqrQoWYyT6-FeHjsC6Uxzba3y_a07CNvaj-TblbPsw/pubhtml?gid=0&amp;single=false&amp;widget=false&amp;headers=false&chrome=false"></iframe>
+								</p>
+							</div>
+						</div>
+					</div>
+					<br/>
+				</div>
+
+			</div>
 
 	</section>
+
 
 
 
