hided some not finished sections and reordered inscipcion after comunidad

--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
         <li><a href="#evento">El Evento</a></li>
 		<li><a href="#disertantes">Disertantes</a></li>
 		<li><a href="#cronograma">Cronograma</a></li>
-		<li><a href="#inscripcion">Inscripción</a></li>
 		<li><a href="#comunidad">Comunidad</a></li>
+		<li><a href="#inscripcion">Inscripción</a></li>
 		<li><a href="#lugar">El Lugar</a></li>
       </ul>
             </div>
@@ -152,7 +152,7 @@
 	</section>
 	<!-- /Section: evento -->
 
-	<!-- Section: about -->
+	<!-- Section: disertantes -->
     <section id="disertantes" class="home-section text-center">
 		<div class="heading-about">
 			<div class="container">
@@ -178,6 +178,8 @@
 		</div>
 
         <div class="row">
+					<h5> Todavía no ha finalizado el proceso de selección! <br/> <br/> Proximamente podrás conocer a nuestros disertantes =) </h5>
+					<!-- DISERTANTES: PROXIMAMENTE!
           <div class="col-xs-6 col-sm-3 col-md-3">
 	    <div class="wow bounceInUp" data-wow-delay="0.2s">
               <div class="team boxed-grey">
@@ -221,16 +223,17 @@
               </div>
 	    </div>
           </div>
-
+					-->
 	  </div>
+	</div>
 
 	<br />
 
 	</section>
+<!-- /Section: disertantes -->
 
 
-
-
+<!-- Section: cronograma -->
 
 
 	<section id="cronograma" class="home-section text-center bg-gray">
@@ -262,7 +265,10 @@
 						<div class="service-box">
 							<div class="service-desc">
 								<p align="center">
+									<h5>Proximamente tendremos definido el programa del evento!</h5>
+									<!-- /Section: cronograma
 									<iframe height="450px" width="100%" src="https://docs.google.com/spreadsheets/d/1FUqrQoWYyT6-FeHjsC6Uxzba3y_a07CNvaj-TblbPsw/pubhtml?gid=0&amp;single=false&amp;widget=false&amp;headers=false&chrome=false"></iframe>
+									-->
 								</p>
 							</div>
 						</div>
@@ -274,66 +280,10 @@
 
 	</section>
 
+<!-- /Section: cronograma -->
 
 
-
-
-	<!-- /Section: about -->
-
-	<section id="inscripcion" class="home-section text-center bg-gray">
-	  <div class="heading-about">
-	    <div class="container">
-	      <div class="row">
-		<div class="col-lg-8 col-lg-offset-2">
-		  <div class="wow bounceInDown" data-wow-delay="0.4s">
-		    <div class="section-heading">
-		      <h2>Inscripción</h2>
-		      <i class="fa fa-2x fa-angle-down"></i>
-
-		    </div>
-		  </div>
-		</div>
-	      </div>
-	    </div>
-	  </div>
-	  <div class="container">
-	    <div class="row">
-	      <div class="col-lg-2 col-lg-offset-5">
-		<hr class="marginbot-50">
-	      </div>
-	    </div>
-            <div class="row">
-
-				<div class="col-lg-6 col-lg-offset-3">
-					<div class="wow fadeInLeft" data-wow-delay="0.2s">
-						<div class="service-box">
-							<div class="service-desc">
-							  <p align="justify">Es fundamental que te
-							  inscribas al evento para poder participar. De
-							  esa forma vas a estar enterado de cualquier
-							  novedad referida al evento y así también nos
-							  ayudás con la difusón del
-							  mismo y una estimación de asistentes. </p><br/>
-							  <h5>Hacé click en "Inscribirme",<br/><br/> Completá el formulario y listo!</h5>
-							</div>
-						</div>
-					</div>
-					<br/>
-					<div class="wow fadeInUp" data-wow-delay="0.2s">
-						<div class="service-box">
-							<div class="service-desc">
-								<p align="center">
-									<a style="width: 250px" target="_blank" class="btn btn-large btn-primary" href="https://docs.google.com/forms/d/e/1FAIpQLSeFM5ZKXVUG-jaNZUXLeQsLNlKqW1ow-TYwwn-NiFki7lEbLg/viewform">Inscribirme</a>
-								</p>
-							</div>
-<br/><br/>
-						</div>
-					</div>
-				</div>
-
-			</div>
-
-	</section>
+<!-- Section: comunidad -->
 
     <section id="comunidad" class="home-section text-center" style="border-top: 1px solid rgba(48, 105, 152, .2);">
 	  <div class="heading-about">
@@ -396,6 +346,70 @@
 
 		</div>
 	</section>
+
+	<!-- /Section: comunidad -->
+
+	<!-- Section: inscripción -->
+
+		<section id="inscripcion" class="home-section text-center bg-gray">
+		  <div class="heading-about">
+		    <div class="container">
+		      <div class="row">
+			<div class="col-lg-8 col-lg-offset-2">
+			  <div class="wow bounceInDown" data-wow-delay="0.4s">
+			    <div class="section-heading">
+			      <h2>Inscripción</h2>
+			      <i class="fa fa-2x fa-angle-down"></i>
+
+			    </div>
+			  </div>
+			</div>
+		      </div>
+		    </div>
+		  </div>
+		  <div class="container">
+		    <div class="row">
+		      <div class="col-lg-2 col-lg-offset-5">
+			<hr class="marginbot-50">
+		      </div>
+		    </div>
+	            <div class="row">
+
+					<div class="col-lg-6 col-lg-offset-3">
+						<div class="wow fadeInLeft" data-wow-delay="0.2s">
+							<div class="service-box">
+								<div class="service-desc">
+									<h5>Próximamente estarán abiertas las inscripciones.<br/><br/> Estate atento!</h5>
+									<!-- /PROXIMAMENTE!
+								  <p align="justify">Es fundamental que te
+								  inscribas al evento para poder participar. De
+								  esa forma vas a estar enterado de cualquier
+								  novedad referida al evento y así también nos
+								  ayudás con la difusón del
+								  mismo y una estimación de asistentes. </p><br/>
+								  <h5>Hacé click en "Inscribirme",<br/><br/> Completá el formulario y listo!</h5>
+								</div>
+							</div>
+						</div>
+						<br/>
+						<div class="wow fadeInUp" data-wow-delay="0.2s">
+							<div class="service-box">
+								<div class="service-desc">
+									<p align="center">
+										<a style="width: 250px" target="_blank" class="btn btn-large btn-primary" href="https://docs.google.com/forms/d/e/1FAIpQLSeFM5ZKXVUG-jaNZUXLeQsLNlKqW1ow-TYwwn-NiFki7lEbLg/viewform">Inscribirme</a>
+									</p>
+								</div>
+	<br/><br/>
+							</div>
+						</div>
+						-->
+					</div>
+
+				</div>
+
+		</section>
+	<!-- /Section: inscripción -->
+
 
 	<!-- Section: contact -->
     <section id="lugar" class="home-section text-center" style="border-top: 1px solid rgba(48, 105, 152, .2);">
