--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
 		<li><a href="#comunidad">Comunidad</a></li>
 		<li><a href="#inscripcion">Inscripción</a></li>
 		<li><a href="#lugar">El Lugar</a></li>
+		<li><a href="#sponsors">Sponsors</a></li>
       </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -411,7 +412,7 @@
 	<!-- /Section: inscripción -->
 
 
-	<!-- Section: contact -->
+	<!-- Section: lugar -->
     <section id="lugar" class="home-section text-center" style="border-top: 1px solid rgba(48, 105, 152, .2);">
 		<div class="heading-contact">
 			<div class="container">
@@ -445,6 +446,95 @@
 
 		</div>
 	</section>
+
+	<!-- /Section: lugar -->
+
+	<!-- Section: sponsors -->
+
+	<section id="sponsors" class="home-section text-center bg-gray">
+	<div class="heading-about">
+		<div class="container">
+			<div class="row">
+	<div class="col-lg-8 col-lg-offset-2">
+		<div class="wow bounceInDown" data-wow-delay="0.4s">
+			<div class="section-heading">
+				<h2>Nos sponsorean </h2>
+				<i class="fa fa-2x fa-angle-down"></i>
+
+			</div>
+		</div>
+	</div>
+			</div>
+		</div>
+	</div>
+	<div class="container">
+		<div class="row">
+			<div class="col-lg-2 col-lg-offset-5">
+	<hr class="marginbot-50">
+			</div>
+		</div>
+					<!-- Sponsors Oro -->
+					<div class="row">
+						<div class="col-sm-6 col-md-6">
+	<div class="wow fadeInLeft" data-wow-delay="0.2s">
+								<div class="service-box">
+
+			<div class="service-desc">
+				<p><a href="http://www.senatics.gov.py/"><img class="oro" src="img/sponsors/machinalis.png" /></a></p>
+				<p align="center">
+					[descripción pendiente]
+					<br/>
+					<a href="http://www.machinalis.com/">http://www.machinalis.com/</a>
+				</p>
+			</div>
+								</div>
+	</div>
+						</div>
+			<div class="col-sm-6 col-md-6">
+	<div class="wow fadeInUp" data-wow-delay="0.2s">
+								<div class="service-box">
+			<div class="service-desc" id="senatics">
+				<p><a href="http://www.agroads.com.ar/"><img class="oro" src="img/sponsors/agroads.jpeg" /></a></p>
+				<p align="center">
+					[descripción y logo pendiente]
+					<br/>
+					<a href="http://www.agroads.com.ar/">http://www.agroads.com.ar/</a>
+				</p>
+			</div>
+								</div>
+
+	</div>
+					</div>
+
+					<!-- Sponsors Plata -->
+					<div class="row">
+						<div class="col-sm-6 col-md-6">
+	<div class="wow fadeInLeft" data-wow-delay="0.2s">
+								<div class="service-box">
+		<br/>
+			<div class="service-desc">
+				<p><a href="http://www.kinexo.com/"><img class="plata" src="img/sponsors/kinexo.png" /></a></p>
+				<p align="center">
+					<h5>Somos una empresa de servicios especializada en el desarrollo de soluciones de software.</h5>
+					Comenzamos nuestras actividades en el año 2001. Desde entonces ofrecemos servicios a empresas del país y el exterior, basándonos en nuestra amplia experiencia en el liderazgo de proyectos de software, diseño y desarrollo de aplicaciones, animación y tecnología aplicada a mejorar la gestión de nuestros clientes
+					<br />
+					<a href="http://www.kinexo.com/">http://www.kinexo.com/</a>
+				</p>
+			</div>
+								</div>
+	</div>
+						</div>
+
+		</div>
+<br/>
+					<!-- Sponsors Bronce (Ninguno todavía) -->
+
+	</div>
+
+</section>
+	<!-- /Section: sponsors -->
+
+
 
     <!-- Core JavaScript Files -->
     <script src="js/jquery.min.js"></script>
