added sponsors categories

--- a/index.html
+++ b/index.html
@@ -475,6 +475,7 @@
 		</div>
 					<!-- Sponsors Oro -->
 					<div class="row">
+						<h3>Sponsors Oro</h3>
 						<div class="col-sm-6 col-md-6">
 	<div class="wow fadeInLeft" data-wow-delay="0.2s">
 								<div class="service-box">
@@ -508,6 +509,7 @@
 
 					<!-- Sponsors Plata -->
 					<div class="row">
+						<h3>Sponsors Plata</h3>
 						<div class="col-sm-6 col-md-6">
 	<div class="wow fadeInLeft" data-wow-delay="0.2s">
 								<div class="service-box">
@@ -540,8 +542,8 @@
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/jquery.easing.min.js"></script>
-	<script src="js/jquery.scrollTo.js"></script>
-	<script src="js/wow.min.js"></script>
+		<script src="js/jquery.scrollTo.js"></script>
+		<script src="js/wow.min.js"></script>
     <!-- Custom Theme JavaScript -->
     <script src="js/custom.js"></script>
 
