Changed agroads logo

--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@
 	<div class="wow fadeInUp" data-wow-delay="0.2s">
 								<div class="service-box">
 			<div class="service-desc" id="senatics">
-				<p><a href="http://www.agroads.com.ar/"><img class="oro" src="img/sponsors/agroads.jpeg" /></a></p>
+				<p><a href="http://www.agroads.com.ar/"><img class="oro" src="img/sponsors/agroads.jpg" /></a></p>
 				<p align="center">
 					Agroads.com.ar nació en Argentina y actualmente está en expansión en Brasil. Es el Ecommerce del Agro donde más de 355.000 productores y comercios conectados, por mes, compran y venden todo para su campo.
 					<br />
