--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
 
 
 		<div class="row" >
-			<iframe width="100%" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.openstreetmap.org/export/embed.html?bbox=-61.50165796279907%2C-31.272086185967012%2C-61.48749589920044%2C-31.264346335228133&amp;layer=mapnik&marker=-31.2666737%2C-61.4961833" style="border: 1px solid black"></iframe><br/><small><a href="https://www.openstreetmap.org/#map=17/-31.26822/-61.49458">Ver mapa más grande</a></small>
+			<iframe width="100%" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.openstreetmap.org/export/embed.html?bbox=-61.50165796279907%2C-31.272086185967012%2C-61.48749589920044%2C-31.264346335228133&amp;layer=mapnik&marker=-31.266706%2C-61.495053" style="border: 1px solid black"></iframe><br/><small><a href="https://www.openstreetmap.org/#map=17/-31.26822/-61.49458">Ver mapa más grande</a></small>
 		</div>
 
 		<div class="row">
