added ucse image with web link

--- a/index.html
+++ b/index.html
@@ -531,6 +531,22 @@
 
 		</div>
 <br/>
+					<!-- Colaboradores -->
+					<div class="row">
+						<h3>Colaboradores</h3>
+						<div class="col-sm-6 col-md-6">
+	<div class="wow fadeInLeft" data-wow-delay="0.2s">
+								<div class="service-box">
+		<br/>
+			<div class="service-desc">
+				<p><a href="http://newsite.ucse.edu.ar/index.php/ucse-sedes/rafaela"><img class="plata" src="img/sponsors/ucse.jpg" /></a></p>
+			</div>
+								</div>
+	</div>
+						</div>
+
+		</div>
+<br/>
 					<!-- Sponsors Bronce (Ninguno todavía) -->
 
 	</div>
