--- a/index.html
+++ b/index.html
@@ -233,6 +233,25 @@
 
 		</div>
 <br/>
+					<!-- Sponsors Bronce -->
+					<div class="row">
+						<h3>Sponsors Bronce</h3>
+						<div class="col-sm-6 col-md-6">
+	<div class="wow fadeInLeft" data-wow-delay="0.2s">
+								<div class="service-box">
+		<br/>
+			<div class="service-desc">
+				<p><a href="http://donweb.com/"><img class="bronce" src="img/sponsors/donweb.jpg" /></a></p>
+				<p align="center">
+					<a href="http://donweb.com/">http://donweb.com/</a>
+				</p>
+			</div>
+								</div>
+	</div>
+						</div>
+
+		</div>
+<br/>
 					<!-- Colaboradores -->
 					<div class="row">
 						<h3>Colaboradores</h3>
@@ -249,7 +268,6 @@
 
 		</div>
 <br/>
-					<!-- Sponsors Bronce (Ninguno todavía) -->
 
 	</div>
 
