changed donweb logo (from its web)

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
 								<div class="service-box">
 		<br/>
 			<div class="service-desc">
-				<p><a href="http://donweb.com/"><img class="bronce" src="img/sponsors/donweb.jpg" /></a></p>
+				<p><a href="http://donweb.com/"><img class="bronce" src="img/sponsors/donweb.png" /></a></p>
 				<p align="center">
 					<a href="http://donweb.com/">http://donweb.com/</a>
 				</p>
