added credits for pyday paraguay

--- a/index.html
+++ b/index.html
@@ -549,6 +549,10 @@
 					</div>
 					</div>
 				</div>
+				<br />
+				<br />
+				<br />
+			<p>Basado en la web de Python Paraguay en <a href="https://github.com/PythonParaguay/pythonparaguay.github.io">https://github.com/PythonParaguay/pythonparaguay.github.io</a></p>
 			</div>
 			</div>
 		</div>
