fixed credit position

--- a/index.html
+++ b/index.html
@@ -549,10 +549,6 @@
 					</div>
 					</div>
 				</div>
-				<br />
-				<br />
-				<br />
-			<p>Basado en la web de Python Paraguay en <a href="https://github.com/PythonParaguay/pythonparaguay.github.io">https://github.com/PythonParaguay/pythonparaguay.github.io</a></p>
 			</div>
 			</div>
 		</div>
@@ -567,7 +563,14 @@
 			<div class="col-md-12 col-lg-12"><br>
 			</div>
 		</div>
-
+		<div class="row">
+			<div class="col-md-12 col-lg-12">
+				<br />
+				<br />
+				<br />
+				<p>Basado en la web de Python Paraguay en <a href="https://github.com/PythonParaguay/pythonparaguay.github.io">https://github.com/PythonParaguay/pythonparaguay.github.io</a></p>
+			</div>
+		</div>
 
 		</div>
 	</section>
