changed meta description

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Primer PyDay en Paraguay, organizado por la comunidad Python en Paraguay y SENATICs">
+    <meta name="description" content="PayDay Rafaela 2016">
     <meta name="author" content="PythonPy">
 
     <title>PyDay 2016 - Rafaela</title>
