Fixed meta data

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="PayDay Rafaela 2016">
-    <meta name="author" content="PythonPy">
+    <meta name="description" content="PyDay Rafaela 2016">
+    <meta name="author" content="PyDay Rafaela">
 
     <title>PyDay 2016 - Rafaela</title>
 
