--- a/index.html
+++ b/index.html
@@ -3,10 +3,8 @@
 
 <head>
 
-	<meta property="og:image" content="http://pyday.pythonpy.org/img/logo-a.png">
+	<meta property="og:image" content="img/pyday-web.png">
 	<meta property="og:image:type" content="image/png">
-	<meta property="og:image:width" content="512">
-	<meta property="og:image:height" content="512">
 
 	<link rel="icon" href="img/favicon.png" type="image/png" sizes="32x32">
 
