added machinalis description

--- a/index.html
+++ b/index.html
@@ -185,6 +185,12 @@
 			<div class="service-desc">
 				<p><a href="http://www.machinalis.com/"><img class="oro" src="img/sponsors/machinalis.png" /></a></p>
 				<p align="center">
+					A team created to support the growing complexity of diverse organizations who need someone (read: us) who can understand the value of their business and help them grow.
+					<br />
+					We are a group of people in pursuit of excellence that's why we are constantly learning, researching and expanding the boundaries of Science and Industry.
+					<br />
+					We are closely linked to the Open Source Community and academic fields, which lead us to enhance the social impact and generate sustainable relationships between our team, the client and the community. Get a bit of #machinalife
+					<br />
 					<a href="http://www.machinalis.com/">http://www.machinalis.com/</a>
 				</p>
 			</div>
