added link to #machinalis hashtag

--- a/index.html
+++ b/index.html
@@ -189,7 +189,10 @@
 					<br />
 					We are a group of people in pursuit of excellence that's why we are constantly learning, researching and expanding the boundaries of Science and Industry.
 					<br />
-					We are closely linked to the Open Source Community and academic fields, which lead us to enhance the social impact and generate sustainable relationships between our team, the client and the community. Get a bit of #machinalife
+					We are closely linked to the Open Source Community and academic fields, which lead us to enhance the social impact and generate sustainable relationships between our team, the client and the community. 
+					<br />
+					Get a bit of <a href="https://twitter.com/search?q=machinalife">#machinalife</a>
+					<br />
 					<br />
 					<a href="http://www.machinalis.com/">http://www.machinalis.com/</a>
 				</p>
@@ -207,6 +210,7 @@
 					<br />
 					Agroads trabaja para que su plataforma de Agro Ecommerce brinde la mejor solución a nivel mundial para la comercialización de bienes y servicios para el sector agropecuario. Para los compradores es el mejor lugar, donde podrán encontrar toda clase de productos y servicios, nuevos o usados, a un clic de distancia. Para los vendedores es el sitio ecommerce ideal para ganar clientes y aumentar sus agronegocios.
 					<br/>
+					<br />
 					<a href="http://www.agroads.com.ar/">http://www.agroads.com.ar/</a>
 				</p>
 			</div>
