deleted gray background in evento section

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 	<!-- /Section: intro -->
 
 	<!-- Section: evento -->
-    <section id="evento" class="home-section text-center bg-gray">
+    <section id="evento" class="home-section text-center">
 
 		<div class="heading-about">
 			<div class="container">
