--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 	</div>
 
     <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
-        <div class="container">
+        <div class="container-fluid">
             <div class="navbar-header page-scroll">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
                     <i class="fa fa-bars"></i>
@@ -150,7 +150,7 @@
 		</div>
 	</section>
 	<!-- /Section: evento -->
-	
+
 	<!-- Section: sponsors -->
 
 	<section id="sponsors" class="home-section text-center bg-gray">
@@ -189,7 +189,7 @@
 					<br />
 					We are a group of people in pursuit of excellence that's why we are constantly learning, researching and expanding the boundaries of Science and Industry.
 					<br />
-					We are closely linked to the Open Source Community and academic fields, which lead us to enhance the social impact and generate sustainable relationships between our team, the client and the community. 
+					We are closely linked to the Open Source Community and academic fields, which lead us to enhance the social impact and generate sustainable relationships between our team, the client and the community.
 					<br />
 					Get a bit of <a href="https://twitter.com/search?q=machinalife">#machinalife</a>
 					<br />
@@ -310,7 +310,7 @@
         <div class="row">
 					<h5> Todavía no ha finalizado el proceso de selección! <br/> <br/> Proximamente podrás conocer a nuestros disertantes =) </h5>
 					<!-- DISERTANTES: PROXIMAMENTE!
-          <div class="col-xs-6 col-sm-3 col-md-3">
+          <div class="col-xs-6 col-sm-3 col-md-4">
 	    <div class="wow bounceInUp" data-wow-delay="0.2s">
               <div class="team boxed-grey">
                 <div class="inner">
@@ -320,18 +320,18 @@
               </div>
 	    </div>
           </div>
-	  <div class="col-xs-6 col-sm-3 col-md-3">
+	  <div class="col-xs-6 col-sm-3 col-md-4">
 	    <div class="wow bounceInUp" data-wow-delay="0.5s">
               <div class="team boxed-grey">
                 <div class="inner">
 		  <h5>Juan Pedro Fisanotti</h5>
-                  <div class="avatar"><img src="img/team/fisa_bw.png" alt="" class="img-responsive img-circle" /></div>
+                  <div class="avatar"><img src="img/team/vanguard.png" alt="" class="img-responsive img-circle" /></div>
 
                 </div>
               </div>
 	    </div>
           </div>
-	  <div class="col-xs-6 col-sm-3 col-md-3">
+	  <div class="col-xs-6 col-sm-3 col-md-4">
 	    <div class="wow bounceInUp" data-wow-delay="0.8s">
               <div class="team boxed-grey">
                 <div class="inner">
@@ -342,18 +342,42 @@
               </div>
 	    </div>
           </div>
-	  <div class="col-xs-6 col-sm-3 col-md-3">
+			</div>
+			<div class="row">
+	  <div class="col-xs-6 col-sm-3 col-md-4">
 	    <div class="wow bounceInUp" data-wow-delay="1s">
               <div class="team boxed-grey">
                 <div class="inner">
 		  <h5>Carlos Matías de la Torre</h5>
-                  <div class="avatar"><img src="img/team/litox.jpg" alt="" class="img-responsive img-circle" /></div>
+                  <div class="avatar"><img src="img/team/litox.webp" alt="" class="img-responsive img-circle" /></div>
 
                 </div>
               </div>
 	    </div>
           </div>
-					-->
+			<div class="col-xs-6 col-sm-3 col-md-4">
+		    <div class="wow bounceInUp" data-wow-delay="1s">
+	              <div class="team boxed-grey">
+	                <div class="inner">
+			  <h5>Francisco Roldán</h5>
+	                  <div class="avatar"><img src="img/team/francisco.png" alt="" class="img-responsive img-circle" /></div>
+
+	                </div>
+	              </div>
+		    </div>
+	          </div>
+						<div class="col-xs-6 col-sm-3 col-md-4">
+					    <div class="wow bounceInUp" data-wow-delay="1s">
+				              <div class="team boxed-grey">
+				                <div class="inner">
+						  <h5>Manuel Quiñonez</h5>
+				                  <div class="avatar"><img src="img/team/manuq.jpg" alt="" class="img-responsive img-circle" /></div>
+
+				                </div>
+				              </div>
+					    </div>
+				          </div>
+							-->
 	  </div>
 	</div>
 
