fixed img info intro problem with small screen

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 				          <div class="service-box">
 
 							<div class="service-desc">
-<img src="img/info-intro.png" alt="" />
+<img class="intro-desc" src="img/info-intro.png" alt="" />
 							</div>
 				          </div>
 
