--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
               <div class="team boxed-grey">
                 <div class="inner">
 		  <h5>Ariel Rossanigo</h5>
-                  <div class="avatar"><img src="img/team/ariel.webp" alt="" class="img-responsive img-circle" /></div>
+                  <div class="avatar"><img src="img/team/ariel.jpg" alt="" class="img-responsive img-circle" /></div>
                 </div>
               </div>
 	    </div>
