changed repo fuente link name

--- a/index.html
+++ b/index.html
@@ -597,7 +597,7 @@
 				<br />
 				<br />
 				<br />
-				<p>Basado en la web de Python Paraguay en <a href="https://github.com/PythonParaguay/pythonparaguay.github.io">https://github.com/PythonParaguay/pythonparaguay.github.io</a></p>
+				<p>Basado en la web de Python Paraguay en <a href="https://github.com/PythonParaguay/pythonparaguay.github.io">este repo</a>.</p>
 			</div>
 		</div>
 
