--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
 
         <div class="row">
 
-          <div class="col-xs-6 col-sm-3 col-md-4">
+          <div class="col-xs-6 col-sm-4">
 	    <div class="wow bounceInUp" data-wow-delay="0.2s">
               <div class="team boxed-grey">
                 <div class="inner">
@@ -319,7 +319,7 @@
               </div>
 	    </div>
           </div>
-	  <div class="col-xs-6 col-sm-3 col-md-4">
+	  <div class="col-xs-6 col-sm-4">
 	    <div class="wow bounceInUp" data-wow-delay="0.5s">
               <div class="team boxed-grey">
                 <div class="inner">
@@ -330,7 +330,7 @@
               </div>
 	    </div>
           </div>
-	  <div class="col-xs-6 col-sm-3 col-md-4">
+	  <div class="col-xs-6 col-sm-4">
 	    <div class="wow bounceInUp" data-wow-delay="0.8s">
               <div class="team boxed-grey">
                 <div class="inner">
@@ -341,9 +341,8 @@
               </div>
 	    </div>
           </div>
-			</div>
-			<div class="row">
-	  <div class="col-xs-6 col-sm-3 col-md-4">
+
+	  <div class="col-xs-6 col-sm-4">
 	    <div class="wow bounceInUp" data-wow-delay="1s">
               <div class="team boxed-grey">
                 <div class="inner">
@@ -354,7 +353,7 @@
               </div>
 	    </div>
           </div>
-			<div class="col-xs-6 col-sm-3 col-md-4">
+			<div class="col-xs-6 col-sm-4">
 		    <div class="wow bounceInUp" data-wow-delay="1s">
 	              <div class="team boxed-grey">
 	                <div class="inner">
@@ -365,7 +364,7 @@
 	              </div>
 		    </div>
 	          </div>
-						<div class="col-xs-6 col-sm-3 col-md-4">
+						<div class="col-xs-6 col-sm-4">
 					    <div class="wow bounceInUp" data-wow-delay="1s">
 				              <div class="team boxed-grey">
 				                <div class="inner">
