fixed background color in insripcion and comunidad

--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
 
 	<!-- Section: inscripción -->
 
-		<section id="inscripcion" class="home-section text-center bg-gray">
+		<section id="inscripcion" class="home-section text-center">
 		  <div class="heading-about">
 		    <div class="container">
 		      <div class="row">
@@ -496,7 +496,7 @@
 
 <!-- Section: comunidad -->
 
-    <section id="comunidad" class="home-section text-center" style="border-top: 1px solid rgba(48, 105, 152, .2);">
+    <section id="comunidad" class="home-section text-center bg-gray" style="border-top: 1px solid rgba(48, 105, 152, .2);">
 	  <div class="heading-about">
 	    <div class="container">
 	      <div class="row">
