added pyar in organizadores

--- a/index.html
+++ b/index.html
@@ -260,10 +260,20 @@
 
 		</div>
 <br/>
-					<!-- Colaboradores -->
+					<!-- Organizadores -->
 					<div class="row">
-						<h3>Colaboradores</h3>
-						<div class="col-sm-6 col-md-12">
+						<h3>Organizan:</h3>
+						<div class="col-sm-6 col-md-6">
+	<div class="wow fadeInLeft" data-wow-delay="0.2s">
+								<div class="service-box">
+		<br/>
+			<div class="service-desc">
+				<p><a href="http://www.python.org.ar/"><img class="plata" src="img/sponsors/logo-pyar.png" /></a></p>
+			</div>
+								</div>
+	</div>
+						</div>
+						<div class="col-sm-6 col-md-6">
 	<div class="wow fadeInLeft" data-wow-delay="0.2s">
 								<div class="service-box">
 		<br/>
