expanded organizadores logo

--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
 								<div class="service-box">
 		<br/>
 			<div class="service-desc">
-				<p><a href="http://www.python.org.ar/"><img class="plata" src="img/sponsors/logo-pyar.png" /></a></p>
+				<p><a href="http://www.python.org.ar/"><img class="oro" src="img/sponsors/logo-pyar.png" /></a></p>
 			</div>
 								</div>
 	</div>
@@ -278,7 +278,7 @@
 								<div class="service-box">
 		<br/>
 			<div class="service-desc">
-				<p><a href="http://newsite.ucse.edu.ar/index.php/ucse-sedes/rafaela"><img class="plata" src="img/sponsors/ucse.jpg" /></a></p>
+				<p><a href="http://newsite.ucse.edu.ar/index.php/ucse-sedes/rafaela"><img class="oro" src="img/sponsors/ucse.jpg" /></a></p>
 			</div>
 								</div>
 	</div>
