changed litox avatar to png

--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
               <div class="team boxed-grey">
                 <div class="inner">
 		  <h5>Carlos Matías de la Torre</h5>
-                  <div class="avatar"><img src="img/team/litox.webp" alt="" class="img-responsive img-circle" /></div>
+                  <div class="avatar"><img src="img/team/litox.png" alt="" class="img-responsive img-circle" /></div>
 
                 </div>
               </div>
