typo lastname manuq

--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
 					    <div class="wow bounceInUp" data-wow-delay="1s">
 				              <div class="team boxed-grey">
 				                <div class="inner">
-						  <h5>Manuel Quiñonez</h5>
+						  <h5>Manuel Quiñones</h5>
 				                  <div class="avatar"><img src="img/team/manuq.jpg" alt="" class="img-responsive img-circle" /></div>
 
 				                </div>
